  * debian/control, dscverify, who-permits-upload, uscan:
    + Add gnupg2/gpgv2 as an alternative option to gnupg/gpgv. (Closes: #788414)

  [ James McCoy ]
  * debuild:
    + Use _all as the .changes arch for -A builds.  (Closes: #806262)
  * dget:
    + Remove unnecessary requirement that “apt-cache policy $pkg” shows a
      priority of 0 for the Candidate version.  (Closes: #807064)

  [ Daniel Kahn Gillmor ]
  * debuild:
    + pass through DBUS_SESSION_BUS_ADDRESS so that gpg-agent can make
      pinentry-gnome3 work (Closes: #805501)

 -- Osamu Aoki <osamu@debian.org>  Wed, 07 Oct 2015 21:46:20 +0900

devscripts (2.15.9) unstable; urgency=medium

  [ Joachim Breitner ]
  * mk-origtargz:
    + Work around tar --delete not working unless piping. This should
      make the support for Excluded-Files more reliable.
      Thanks to Felix Natter for identifying the problem and solution.
  * debcommit:
    + Detect git repositories even if .git is a file instead of a directory,
      as it can be the case with "git worktree" worktrees.
  * origtargz: Call rm -rf with "--", so that files starting with - are not
    considered arguments by rm.

  [ James McCoy ]
  * bts:
    + Add reference to pts-subscribe(1) in bts(1).  (Closes: #794689)
  * tagpending:
    + Fix warning when there are no fixed bugs in the changelog.  (Closes:
      #795470)
    + Avoid querying the BTS when there are no bugs closed in the changelog.
  * mergechanges:
    + Add -S/--source argument to skip all binary packages.  Thanks to Ansgar
      Burchardt for the patch.  (Closes: #795573)
  * debchange:
    + Only emit "no orig tarball" for non-native packages.  (Closes: #797018)
  * debcheckout:
    + Clarify documentation of -f option.  Thanks to Daniel Shahaf for the
      patch!  (Closes: #797265)
  * annotate-output:
    + Optimize the case of FORMAT not containing any date format codes.
      Thanks to Stefan Fritsch for the patch.  (Closes: #799553)
  * build-rdeps: