@@ -100,6 +100,7 @@ devscripts (2.15.10) UNRELEASED; urgency=medium
   * dget:
     + Remove unnecessary requirement that “apt-cache policy $pkg” shows a
       priority of 0 for the Candidate version.  (Closes: #807064)
+    + Fix parsing of sources.list lines with options.  (Closes: #674812)
 
   [ Daniel Kahn Gillmor ]
   * debuild:
